fix distorted images with css object-fit

--- a/ckanext/berlintheme/theme/assets/css/ckan_extra.css
+++ b/ckanext/berlintheme/theme/assets/css/ckan_extra.css
@@ -94,6 +94,22 @@
   border: 0;
 }
 
+/* object fit */
+
+.modul-teaser .image img {
+  background-color: #f5f5f5;
+  height: 100%;
+}
+
+img.cover, .activity.cover img {
+  object-fit: cover;
+}
+
+img.contain, .activity.contain img {
+  object-fit: contain;
+}
+
+
 /* Content Actions */
 
 @media print,(max-width: 73.8135rem ) {
